--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,12 +32,14 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v2
+      - name: Install dependencies
+        run: npm ci
       - name: Create Build
         run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: './_build/'
+          path: "./_build/"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
